--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 	<script src="https://unpkg.com/vue@2.7.15/dist/vue.js"></script>
     <script src="https://unpkg.com/element-ui/lib/index.js"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <style>
         #app {
             display: flex;
