--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 			</div>
 		</div>
 		<div class="button-group">
-			<el-button :key="generated" v-if="activeTab=='fixed'&&!generated" style="width:50%" @click="addPlayer" type="primary" plain
-				round>增加球员</el-button>
+			<el-button :key="generated" v-if="activeTab=='fixed'&&!generated" style="width:50%" @click="addPlayer"
+				type="primary" plain round>增加球员</el-button>
 			<el-button :key="generated" v-if="!generated" :style="activeTab=='wechat'?'width:100%':'width:50%'"
 				:disabled="parsedPlayers.length==0&&activeTab=='wechat'" @click="generateGroups" type="primary"
 				round>生成分组</el-button>
@@ -214,13 +214,40 @@
 					this.generated = true
 				},
 				copyToClipboard() {
-					let text = this.groups.map(group => group.map(player => player.name).join('\n')).join('\n========\n');
-					navigator.clipboard.writeText(text).then(() => {
-						this.$message('已复制到剪贴板');
-					}, () => {
-						this.$message('复制失败');
-					});
+					let text = this.groups.map(group => group.map(player => player.name).join('\n')).join('\n===========\n');
+					if (navigator.clipboard && window.isSecureContext) {
+						// navigator clipboard 向剪贴板写文本
+						navigator.clipboard.writeText(text).then(() => {
+							this.$message('已复制到剪贴板');
+						}, () => {
+							this.$message('复制失败');
+						});
+					} else {
+						// 创建text area
+						let textArea = document.createElement("textarea");
+						textArea.value = text;
+						// 使text area不在viewport，同时设置不可见
+						textArea.style.position = "absolute";
+						textArea.style.opacity = 0;
+						textArea.style.left = "-999999px";
+						textArea.style.top = "-999999px";
+						document.body.appendChild(textArea);
+						textArea.focus();
+						textArea.select();
+						return new Promise((res, rej) => {
+							// 执行复制命令并移除文本框
+							if (document.execCommand('copy')) {
+								res();
+								this.$message('已复制到剪贴板');
+							} else {
+								rej();
+								this.$message('复制失败');
+							}
+							textArea.remove();
+						});
+					}
 				}
+
 			}
 		});
 	</script>
