--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<el-input :key="generated" type="textarea" :rows="17"
 						placeholder="请直接拷贝粘贴微信接龙： &#10;1. 球员@L1 &#10;2. 球员@L2 &#10;3. 球员 &#10; &#10;&#10;@Lx表示球员Level(重量级或位置)，x取值1到5，1最低(1号位)、5最高(5号位)。如果不带@Lx, 默认为L3。球员可以在自己微信群名称里预置。 &#10; &#10;分组策略：每组4人。一共进行4轮选人，每轮所有队伍按已有球员总重量级由低到高排序，依次从未分配球员里选择一个重量级最高的球员。"
 						v-model="wechatInput" @input="parseWechatInput"></el-input>
-					<p>解析出{{parsedPlayers.length}}个球员</p>
+					<p v-if="wechatInput" style="text-align: right;">解析出{{parsedPlayers.length}}个球员</p>
 				</el-tab-pane>
 				<el-tab-pane label="PBA预置" name="fixed">
 					<el-table :data="players" style="width: 100%" class="pba-preset-table">
@@ -118,7 +118,7 @@
 					{ name: '张韬', level: 3, isParticipating: true },
 					{ name: '老何', level: 2, isParticipating: true },
 					{ name: '老徐', level: 2, isParticipating: true },
-					{ name: '老李', level: 2, isParticipating: true },
+					{ name: '老李', level: 1, isParticipating: true },
 					{ name: '大哥', level: 1, isParticipating: true },
 					{ name: '宏业', level: 1, isParticipating: true },
 					{ name: '何军同事', level: 1, isParticipating: false },
