--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<el-tabs v-model="activeTab" @tab-click="handleTabClick">
 				<el-tab-pane label="微信接龙" name="wechat">
 					<el-input :key="generated" type="textarea" :rows="17"
-						placeholder="请直接拷贝粘贴微信接龙： &#10;1. 球员@L1 &#10;2. 球员@L2 &#10;3. 球员 &#10; &#10;&#10;@Lx表示球员Level(重量级或位置)，x取值1到5，1最低(1号位)、5最高(5号位)。如果不带@Lx, 默认为L3。球员可以在自己微信群名称里预置。 &#10; &#10;分组策略：每组4人。一共进行4轮选人，每轮所有队伍按已有球员总重量级由低到高排序，依次从未分配球员里选择一个重量级最高的球员。"
+						placeholder="请直接拷贝粘贴微信接龙： &#10;1. 球员L1 &#10;2. 球员L2 &#10;3. 球员 &#10; &#10;&#10;Lx表示球员Level(重量级或位置)，x常规取值1到5，也可对应1号位到5号位，需多人包夹的球霸最高可设置到15。如果不带Lx, 默认为L3。球员可以在自己微信群名称里预置。 &#10; &#10;分组策略：每组4人。一共进行多轮选人，每轮所有队伍按已有球员总重量级由低到高排序，重量级最低的、未满员的队伍从未分配球员里选择一个重量级最高的球员。"
 						v-model="wechatInput" @input="parseWechatInput"></el-input>
 					<p v-if="wechatInput" style="text-align: right;">解析出{{parsedPlayers.length}}个球员</p>
 				</el-tab-pane>
@@ -106,8 +106,8 @@
 				activeTab: 'wechat',
 				wechatInput: '',
 				players: [
-					{ name: 'HuZhe', level: 5, isParticipating: false },
-					{ name: '老包', level: 5, isParticipating: false },
+					{ name: 'HuZhe', level: 10, isParticipating: false },
+					{ name: '老包', level: 10, isParticipating: false },
 					{ name: '小江', level: 4, isParticipating: true },
 					{ name: '老蒋', level: 4, isParticipating: true },
 					{ name: 'Michael', level: 4, isParticipating: true },
@@ -126,24 +126,14 @@
 				],
 				parsedPlayers: [],
 				groups: [],
-				options: [{
-					value: 1,
-					label: 'L1'
-				}, {
-					value: 2,
-					label: 'L2'
-				}, {
-					value: 3,
-					label: 'L3'
-				}, {
-					value: 4,
-					label: 'L4'
-				}, {
-					value: 5,
-					label: 'L5'
-				}],
+				options: [],
 				newCount: 1,
 				generated: false
+			},
+			created () {
+				for(let i = 1; i < 16; i++){
+					this.options.push({value: i, label: 'L'+i })
+				}
 			},
 			computed: {
 				participatingPlayersLength: function () {
