--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
             { name: "老李", level: 1, isParticipating: true },
             { name: "大哥", level: 1, isParticipating: true },
             { name: "宏业", level: 1, isParticipating: true },
+	    { name: "EP", level: 2, isParticipating: true },
             { name: "何军同事", level: 1, isParticipating: false },
             { name: "HuZhe同学", level: 2, isParticipating: false },
           ],
