--- a/index.html
+++ b/index.html
@@ -169,22 +169,22 @@
           activeTab: "wechat",
           wechatInput: "",
           players: [
-            { name: "HuZhe", level: 10, isParticipating: false },
-            { name: "老包", level: 10, isParticipating: false },
+            { name: "HuZhe", level: 7, isParticipating: false },
+            { name: "老包", level: 7, isParticipating: false },
             { name: "小江", level: 4, isParticipating: true },
-            { name: "老蒋", level: 4, isParticipating: true },
-            { name: "Michael", level: 4, isParticipating: true },
+            { name: "老蒋", level: 5, isParticipating: true },
+            { name: "Michael", level: 5, isParticipating: true },
             { name: "彪哥", level: 4, isParticipating: true },
             { name: "科比", level: 3, isParticipating: true },
             { name: "何军", level: 3, isParticipating: true },
-            { name: "BHT", level: 3, isParticipating: true },
-            { name: "张韬", level: 3, isParticipating: true },
+            { name: "BHT", level: 3, isParticipating: false },
+            { name: "张韬", level: 5, isParticipating: true },
             { name: "老何", level: 2, isParticipating: true },
             { name: "老徐", level: 2, isParticipating: true },
             { name: "老李", level: 1, isParticipating: true },
             { name: "大哥", level: 1, isParticipating: true },
             { name: "宏业", level: 1, isParticipating: true },
-	    { name: "EP", level: 2, isParticipating: true },
+	    { name: "EP", level: 4, isParticipating: true },
             { name: "何军同事", level: 1, isParticipating: false },
             { name: "HuZhe同学", level: 2, isParticipating: false },
           ],
